force-app/main/default/objects/Listing_Protect_Program_History__c/Listing_Protect_Program_History__c.object-meta.xml
<CustomObject>
    <label>Listing Protect Program History</label>
    <nameField>
        <displayFormat>H{00000}</displayFormat>
        <label>History ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Listing Protect Program History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>