force-app/main/default/objects/Listing_Protect_Program_History__c/fields/BOR_Email_ID__c.field-meta.xml
<CustomField>
    <fullName>BOR_Email_ID__c</fullName>
    <label>BOR Email ID</label>
    <type>Email</type>
</CustomField>