force-app/main/default/objects/Listing_Protect_Program_History__c/fields/BOR_Initials__c.field-meta.xml
<CustomField>
    <fullName>BOR_Initials__c</fullName>
    <label>BOR Initials</label>
    <length>80</length>
    <type>Text</type>
</CustomField>