force-app/main/default/objects/Listing_Protect_Program_History__c/fields/BOR_Name__c.field-meta.xml
<CustomField>
    <fullName>BOR_Name__c</fullName>
    <description>Broker of Record who has made a selection change to the Copyright Program</description>
    <label>BOR Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>