force-app/main/default/objects/Listing_Protect_Program_History__c/fields/Case_ID__c.field-meta.xml
<CustomField>
    <fullName>Case_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case ID</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>Opt_Program_History</relationshipName>
    <type>Lookup</type>
</CustomField>