force-app/main/default/objects/Listing_Protect_Program_History__c/fields/Changed_By__c.field-meta.xml
<CustomField>
    <fullName>Changed_By__c</fullName>
    <formula>CreatedBy.FirstName  &amp; &apos; &apos;  &amp;  CreatedBy.LastName</formula>
    <label>Changed By</label>
    <type>Text</type>
</CustomField>