force-app/main/default/objects/Listing_Protect_Program_History__c/fields/Changed_On__c.field-meta.xml
<CustomField>
    <fullName>Changed_On__c</fullName>
    <formula>CreatedDate</formula>
    <label>Changed On</label>
    <type>DateTime</type>
</CustomField>