force-app/main/default/objects/Listing_Protect_Program_History__c/fields/Current_Selection__c.field-meta.xml
<CustomField>
    <fullName>Current_Selection__c</fullName>
    <label>Current Selection</label>
    <length>10</length>
    <type>Text</type>
</CustomField>