force-app/main/default/objects/Listing_Protect_Program_History__c/fields/Office_ID__c.field-meta.xml
<CustomField>
    <fullName>Office_ID__c</fullName>
    <label>Office ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Opt_Program_History</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>