force-app/main/default/objects/Listing_Protect_Program_History__c/fields/Previous_Selection__c.field-meta.xml
<CustomField>
    <fullName>Previous_Selection__c</fullName>
    <label>Previous Selection</label>
    <length>10</length>
    <type>Text</type>
</CustomField>