force-app/main/default/objects/Listing_Protect_Program_History__c/fields/Subscription_ID__c.field-meta.xml
<CustomField>
    <fullName>Subscription_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subscription ID</label>
    <referenceTo>Subscriptions__c</referenceTo>
    <relationshipName>Opt_Program_History</relationshipName>
    <type>Lookup</type>
</CustomField>